# embedded_c_utils

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
cmake/analysis/: clang-format.cmake  code-coverage.cmake
include/: cbuff.h  interpolate.h  llist.h  utils_common.h  utils_debug.h
scripts/: clang_format.sh
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/control/: CMakeLists.txt  pid.c  plot.c  res_texture.h  shader_utils.c  shader_utils.h
src/app/state_machines/: CMakeLists.txt  sm_elevator.c  st_elevator.c  sync_thread.c
src/lib/: CMakeLists.txt
src/lib/cbuff/: CMakeLists.txt  README.md  cbuff.c  cbuff_datatypes.h  cbuff_defines.h
src/lib/interpolation/: CMakeLists.txt  README.md  interpolate.c
src/lib/llist/: CMakeLists.txt  README.md  llist.c  llist_datatypes.h  llist_defines.h
src/lib/queue/: CMakeLists.txt  queue.cpp  queue.hpp
tests/: CMakeLists.txt
tests/lib/: CMakeLists.txt
tests/lib/cbuff/: CMakeLists.txt  test_cbuff.c
tests/lib/interpolation/: CMakeLists.txt  test_interpolate.c
tests/lib/llist/: CMakeLists.txt  my_list.c  test_llist.c
