#******************************************************************************
#*Copyright (C) 2023 by Salvador Z                                            *
#*                                                                            *
#*****************************************************************************/
#*
#*@author Salvador Z
#*@brief CMakeLists file to add subscribe lib directories
#*
add_subdirectory(cbuff) # Circular/ring buffer
