#******************************************************************************
#*Copyright (C) 2023 by Salvador Z                                            *
#*                                                                            *
#*****************************************************************************/
#*
#*@author Salvador Z
#*@brief CMakeLists file to add subscribe lib directories
#*
add_subdirectory(cbuff) # Circular/ring buffer
add_subdirectory(interpolation) # Interpolate a linear function estimation
add_subdirectory(llist) # Linked list
add_subdirectory(queue) # Queue class a FIFO class structure in CPP
