#******************************************************************************
#*Copyright (C) 2023 by Salvador Z                                            *
#*                                                                            *
#*****************************************************************************/
#*
#*@author Salvador Z
#*@brief CMakeLists file to subscribe lib (test) directories
#*
add_subdirectory(cbuff) # Circular/ring buffer test